--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ ul {
     gap: 12px;
 }
 
-
 .top-container {
     display: flex;
     justify-content: space-between;
@@ -70,7 +69,7 @@ ul {
 }
 
 .random {
-    margin: 20px 0;
+    /* margin: 20px 0; */
     display: flex;
     justify-content: center;
 }
@@ -81,7 +80,7 @@ ul {
     align-items: center;
     gap: 16px;
     height: 200px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
 }
 
 .info {
@@ -112,15 +111,17 @@ ul {
     align-items: center;
     flex-direction: column;
     height: 200px;
-    margin-top: 20px;
+    /* margin-top: 20px; */
 }
 
 .third-page p {
     width: 600px;
+    font-size: 26px;
 }
 
 .thor {
     text-align: end;
+    font-weight: bold;
 }
 
 .fourth-page {
@@ -146,6 +147,7 @@ ul {
 .butt {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .butt button {
@@ -165,4 +167,12 @@ ul {
     display: flex;
     justify-content: center;
     padding: 20px;
+}
+
+.first-page,
+.second-page,
+.third-page,
+.fourth-page {
+    height: 250px;
+    margin-bottom: 20px;
 }
