--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body {
     display: flex;
+    width: 100%;
 }
 
 ul {
@@ -24,7 +25,7 @@ a {
     display: flex;
     flex-direction: column;
     max-width: 1000px;
-     margin: 0 auto;
+    margin: 0 auto;
 }
 
 .top-container {
